--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "firebase": "^10.12.5",
+    "franc-min": "^6.2.0",
     "next": "14.2.5",
     "openai": "^4.55.4",
     "react": "^18",
